--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "bs-moment": "^0.4.4",
     "bs-platform": "^5.0.6",
     "fela": "^10.8.2",
+    "fela-plugin-rtl": "^10.8.2",
     "fela-preset-web": "^10.8.2",
     "moment": "^2.24.0",
     "react": "^16.9.0",
