--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,6 @@
     "**/*.bs.js": true,
     "**/*.elo.js": true,
     "**/*.elo.css": true,
- 
     "**/.DS_Store": true,
     "**/.next": true,
     "**/node_modules": true,
@@ -14,6 +13,9 @@
     "**/es": true,
     "**/public": true,
     "**/.graphql_ppx_cache/": true,
-    "**/.log": true
+    "**/.log": true,
+    // "**/*Style.re": true,
+    "src/icons/js": true,
+    "**/*.gen.*": true
   }
 }
