--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "deploy": "yarn build && now --target production",
     "clean": "rimraf lib es coverage public/storybook public/playroom",
     "build": "yarn build:package && yarn build:page",
-    "build:package": "yarn run clean && yarn build:elodin && yarn build:reason && yarn build:es && yarn build:lib",
+    "build:package": "yarn run clean && yarn build:icons && yarn build:elodin && yarn build:reason && yarn build:es && yarn build:lib",
     "build:page": "next build && yarn build:storybook && yarn build:playroom",
     "build:es": "babel src --out-dir es --ignore \"src/__tests__\" --copy-files",
     "build:lib": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore \"src/__tests__\" --copy-files",
@@ -51,8 +51,9 @@
   "dependencies": {
     "babel-plugin-bucklescript": "^0.5.3",
     "bs-moment": "^0.4.4",
-    "bs-platform": "^5.0.6",
+    "bs-platform": "^6.2.x",
     "fela": "^10.8.2",
+    "fela-plugin-named-keys": "^10.8.2",
     "fela-plugin-rtl": "^10.8.2",
     "fela-preset-web": "^10.8.2",
     "moment": "^2.24.0",
@@ -61,8 +62,7 @@
     "react-dom": "^16.9.0",
     "react-fela": "^10.8.2",
     "reason-fela": "^10.8.2",
-    "reason-react": "^0.7.0",
-    "use-google-autocomplete": "^0.1.0"
+    "reason-react": "^0.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
@@ -75,7 +75,6 @@
     "@elodin/core": "^0.0.41",
     "@elodin/generator-reason": "^0.0.41",
     "@elodin/parser": "^0.0.41",
-    "@elodin/plugin-rename-variable": "^0.0.41",
     "@elodin/plugin-replace-variable": "^0.0.41",
     "@elodin/utils": "^0.0.41",
     "@next/bundle-analyzer": "^9.1.3",
@@ -93,12 +92,14 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.2.0",
     "dom-parser": "^0.1.6",
+    "gentype": "^3.4.1",
     "jest": "^23.6.0",
     "next": "^9.1.1",
     "next-offline": "^4.0.6",
     "next-transpile-modules": "^2.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "playroom": "^0.9.4",
+    "prettier": "^1.19.1",
     "prettier-plugin-elodin": "^0.0.41",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
