move to newest elodin version

--- a/packages/globe/package.json
+++ b/packages/globe/package.json
@@ -31,36 +31,39 @@
     "build:lib": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore \"src/__tests__\" --copy-files",
     "build:gen": "cross-env BABEL_ENV=commonjs babel generator/src --out-dir generator/out --ignore \"src/__tests__\" --copy-files",
     "build:reason": "bsb -clean-world -make-world",
-    "build:elodin": "elodin src --clean",
+    "build:elodin": "elodin --clean",
     "build:icons": "node scripts/icons.js && svgr -d src/icons/js src/icons/svg --icon",
     "build:storybook": "build-storybook -c .storybook -o ../website/public/storybook",
+    "build:styleguide": "styleguidist build",
     "build:playroom": "playroom build",
     "test": "cross-env BABEL_ENV=commonjs echo 1",
     "coverage": "yarn test --coverage",
     "storybook": "start-storybook -p 6006 -s ./",
+    "styleguide": "styleguidist server",
     "playroom": "playroom start",
     "reason": "bsb -clean-world -make-world -w",
     "release": "yarn build && npm publish",
-    "elodin": "elodin src --watch --clean"
+    "elodin": "elodin --watch --clean"
   },
   "license": "MIT",
   "dependencies": {
     "bs-moment": "^0.4.4",
     "bs-platform": "^6.0.x",
-    "fela": "^11.0.2",
-    "fela-plugin-named-keys": "^11.0.2",
-    "fela-plugin-responsive-value": "^11.0.2",
-    "fela-plugin-rtl": "^11.0.2",
-    "fela-preset-web": "^11.0.2",
-    "fela-sort-media-query-mobile-first": "^11.0.2",
+    "fela": "^11.3.0",
+    "fela-plugin-named-keys": "^11.3.0",
+    "fela-plugin-responsive-value": "^11.3.0",
+    "fela-plugin-rtl": "^11.3.0",
+    "fela-preset-web": "^11.3.0",
+    "fela-sort-media-query-mobile-first": "^11.3.0",
+    "kilvin": "^2.0.10",
     "markdown-to-jsx": "^6.10.3",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dates": "^21.0.1",
     "react-dom": "^16.9.0",
-    "react-fela": "^11.0.2",
-    "reason-fela": "^11.0.2",
-    "reason-react": "^0.7.0"
+    "react-fela": "^11.3.0",
+    "reason-fela": "^11.3.0",
+    "reason-react": "^0.7.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
@@ -69,12 +72,13 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@elodin/cli": "^0.0.41",
-    "@elodin/core": "^0.0.41",
-    "@elodin/generator-reason": "^0.0.41",
-    "@elodin/parser": "^0.0.41",
-    "@elodin/plugin-replace-variable": "^0.0.41",
-    "@elodin/utils": "^0.0.41",
+    "@elodin/cli": "^0.0.45",
+    "@elodin/core": "^0.0.45",
+    "@elodin/generator-reason": "^0.0.45",
+    "@elodin/plugin-replace-variable": "^0.0.45",
+    "@elodin/utils-core": "^0.0.45",
+    "@elodin/utils-css": "^0.0.45",
+    "@elodin/utils-reason": "^0.0.45",
     "@storybook/addon-actions": "^5.1.10",
     "@storybook/addon-knobs": "^5.1.10",
     "@storybook/addon-links": "^5.1.10",
@@ -87,7 +91,8 @@
     "babel-plugin-bucklescript": "^0.5.3",
     "cross-env": "^6.0.3",
     "jest": "^23.6.0",
-    "playroom": "^0.9.4",
+    "playroom": "^0.16.1",
+    "react-styleguidist": "^11.0.4",
     "read-transform-write": "^2.1.0",
     "rimraf": "^3.0.0",
     "xmldom": "^0.1.27"
